# kubesolo-ansible

./: .ansible-lint  .gitignore  .yamllint  Makefile  README.md  ansible.cfg  galaxy.yml  pyproject.toml
e2e/playbooks/: install.yml  uninstall.yml  verify-uninstall.yml  verify.yml
e2e/scripts/: cleanup.sh  common.sh  test-all.sh  test-install.sh  test-uninstall.sh  test-upgrade.sh
roles/kubesolo/defaults/: main.yml
roles/kubesolo/handlers/: main.yml
roles/kubesolo/meta/: main.yml
roles/kubesolo/tasks/: detect.yml  install.yml  install_minimal.yml  main.yml  preflight.yml  uninstall.yml  upgrade.yml
roles/kubesolo/tasks/service/: minimal-openrc.yml  minimal-runit.yml  minimal-s6.yml  minimal-systemd.yml  minimal-sysvinit.yml  minimal-upstart.yml  openrc.yml  runit.yml  s6.yml  start-openrc.yml  start-runit.yml  start-s6.yml  start-systemd.yml  start-sysvinit.yml  start-upstart.yml  stop-openrc.yml  stop-runit.yml  stop-s6.yml  stop-systemd.yml  stop-sysvinit.yml  stop-upstart.yml  systemd.yml  sysvinit.yml  upgrade-openrc.yml  upgrade-runit.yml  upgrade-s6.yml  upgrade-systemd.yml  upgrade-sysvinit.yml  upgrade-upstart.yml  upstart.yml
roles/kubesolo/tasks/uninstall/: openrc.yml  runit.yml  s6.yml  systemd.yml  sysvinit.yml  upstart.yml
roles/kubesolo/templates/: kubesolo-ctl.j2  kubesolo.openrc.j2  kubesolo.runit.run.j2  kubesolo.s6.run.j2  kubesolo.service.j2  kubesolo.sysvinit.j2  kubesolo.upstart.j2
roles/kubesolo/vars/: main.yml
