[project]
name = "kubesolo-ansible"
version = "0.1.0"
description = "Ansible collection for KubeSolo deployment and management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ansible-core>=2.15.0",
]

[dependency-groups]
dev = [
    "ansible-lint>=25.0.0",
    "yamllint>=1.35.0",
]
